fix: adjust grid layout in additional section for better alignment

--- a/src/detailview.scss
+++ b/src/detailview.scss
@@ -107,7 +107,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  width: 90%;
+  justify-items: center;
   margin-top: 1.5rem;
 }
 
